// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginTerminal links 1`] = `
<div
  class="Component-window-0-1-5 Component-windowBright-0-1-7 Component-windowAutoStretch-0-1-6"
  tabindex="1"
>
  <div
    class="Component-windowHeader-0-1-1 Component-header-0-1-10"
  >
    <p
      class="Component-title-0-1-12"
    >
      Links
    </p>
  </div>
  <div
    class="Component-windowBody-0-1-2 Component-body-0-1-15"
  >
    <ul
      class="Component-ul-0-1-3"
    >
      <li
        class="Component-li-0-1-4"
      >
        <a
          class="Component-link-0-1-16 Component-link-0-1-19 btn btn-link"
          href="http://localhost:6006"
          rel="noreferrer noopener"
          target="_blank"
        >
          <img
            alt="Storybook"
            class="Component-image-0-1-18"
            src="https://storybook.js.org/images/logos/icon-storybook.png"
          />
          Storybook
        </a>
      </li>
      <li
        class="Component-li-0-1-4"
      >
        <a
          class="Component-link-0-1-16 Component-link-0-1-20 btn btn-link"
          href="http://localhost:6008"
          rel="noreferrer noopener"
          target="_blank"
        >
          <span
            class="Component-icon-0-1-17 Component-root-0-1-21 Component-size-m-0-1-23"
          >
            <i
              class="material-icons Component-size-i-m-0-1-26"
            >
              compare
            </i>
          </span>
          Development environment
        </a>
      </li>
      <li
        class="Component-li-0-1-4"
      >
        <a
          class="Component-link-0-1-16 Component-link-0-1-35 btn btn-link"
          href="http://localhost:6009"
          rel="noreferrer noopener"
          target="_blank"
        >
          <span
            class="Component-icon-0-1-17 Component-root-0-1-21 Component-size-m-0-1-23"
          >
            <i
              class="material-icons Component-size-i-m-0-1-26"
            >
              devices
            </i>
          </span>
          Staging environment
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`PluginTerminal links in dark mode 1`] = `
<div
  class="Component-window-0-1-5 Component-windowDark-0-1-8 Component-windowAutoStretch-0-1-6"
  tabindex="1"
>
  <div
    class="Component-windowHeader-0-1-1 Component-header-0-1-10"
  >
    <p
      class="Component-title-0-1-12"
    >
      Links
    </p>
  </div>
  <div
    class="Component-windowBody-0-1-2 Component-body-0-1-15"
  >
    <ul
      class="Component-ul-0-1-3"
    >
      <li
        class="Component-li-0-1-4"
      >
        <a
          class="Component-link-0-1-16 Component-link-0-1-36 btn btn-link"
          href="http://localhost:6006"
          rel="noreferrer noopener"
          target="_blank"
        >
          <img
            alt="Storybook"
            class="Component-image-0-1-18"
            src="https://storybook.js.org/images/logos/icon-storybook.png"
          />
          Storybook
        </a>
      </li>
      <li
        class="Component-li-0-1-4"
      >
        <a
          class="Component-link-0-1-16 Component-link-0-1-37 btn btn-link"
          href="http://localhost:6008"
          rel="noreferrer noopener"
          target="_blank"
        >
          <span
            class="Component-icon-0-1-17 Component-root-0-1-21 Component-size-m-0-1-23"
          >
            <i
              class="material-icons Component-size-i-m-0-1-26"
            >
              compare
            </i>
          </span>
          Development environment
        </a>
      </li>
      <li
        class="Component-li-0-1-4"
      >
        <a
          class="Component-link-0-1-16 Component-link-0-1-38 btn btn-link"
          href="http://localhost:6009"
          rel="noreferrer noopener"
          target="_blank"
        >
          <span
            class="Component-icon-0-1-17 Component-root-0-1-21 Component-size-m-0-1-23"
          >
            <i
              class="material-icons Component-size-i-m-0-1-26"
            >
              devices
            </i>
          </span>
          Staging environment
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`PluginTerminal teaser with icon 1`] = `
<div
  class="Component-window-0-1-5 Component-windowBright-0-1-7 Component-windowAutoStretch-0-1-6"
  tabindex="1"
>
  <div
    class="Component-windowBody-0-1-2 Component-body-0-1-15"
  >
    <ul
      class="Component-ul-0-1-3"
    >
      <li
        class="Component-li-0-1-4"
      >
        <div
          class="Component-card-0-1-39 card"
        >
          <div
            class="Component-cardIconWrap-0-1-41"
          >
            <span
              class=" Component-root-0-1-21 Component-size-l-0-1-24"
            >
              <i
                class="material-icons Component-size-i-l-0-1-27"
              >
                compare
              </i>
            </span>
          </div>
          <div
            class="Component-cardBody-0-1-43 card-body"
          >
            <div
              class="Component-cardTitle-0-1-44 card-title h5"
            >
              Storybook
            </div>
            <p
              class="Component-cardText-0-1-45 card-text"
            >
              Build bulletproof UI components faster. Storybook is an open source tool for developing UI components in isolation for React, Vue, and Angular. It makes building stunning UIs organized and efficient.
            </p>
          </div>
          <a
            class="Component-link-0-1-46"
            href="http://localhost:6006"
            rel="noreferrer noopener"
            target="_blank"
          />
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`PluginTerminal teaser with multiple links 1`] = `
<div
  class="Component-window-0-1-5 Component-windowBright-0-1-7 Component-windowAutoStretch-0-1-6"
  tabindex="1"
>
  <div
    class="Component-windowBody-0-1-2 Component-body-0-1-15"
  >
    <ul
      class="Component-ul-0-1-3"
    >
      <li
        class="Component-li-0-1-4"
      >
        <div
          class="Component-card-0-1-39 card"
        >
          <div
            class="Component-cardImageWrap-0-1-40"
          >
            <img
              alt="Storybook"
              class="card-img-top Component-cardImage-0-1-42"
              src="https://storybook.js.org/images/logos/icon-storybook.png"
            />
          </div>
          <div
            class="Component-cardBody-0-1-43 card-body"
          >
            <div
              class="Component-cardTitle-0-1-44 card-title h5"
            >
              Storybook
            </div>
            <p
              class="Component-cardText-0-1-45 card-text"
            >
              Build bulletproof UI components faster. Storybook is an open source tool for developing UI components in isolation for React, Vue, and Angular. It makes building stunning UIs organized and efficient.
            </p>
            <a
              class="Component-link-0-1-16 Component-link-0-1-47 btn btn-link"
              href="http://localhost:6006"
              rel="noreferrer noopener"
              target="_blank"
            >
              <img
                alt="Storybook"
                class="Component-image-0-1-18"
                src="https://storybook.js.org/images/logos/icon-storybook.png"
              />
              Storybook
            </a>
            <a
              class="Component-link-0-1-16 Component-link-0-1-48 btn btn-link"
              href="http://localhost:6008"
              rel="noreferrer noopener"
              target="_blank"
            >
              <span
                class="Component-icon-0-1-17 Component-root-0-1-21 Component-size-m-0-1-23"
              >
                <i
                  class="material-icons Component-size-i-m-0-1-26"
                >
                  compare
                </i>
              </span>
              Development environment
            </a>
            <a
              class="Component-link-0-1-16 Component-link-0-1-49 btn btn-link"
              href="http://localhost:6009"
              rel="noreferrer noopener"
              target="_blank"
            >
              <span
                class="Component-icon-0-1-17 Component-root-0-1-21 Component-size-m-0-1-23"
              >
                <i
                  class="material-icons Component-size-i-m-0-1-26"
                >
                  devices
                </i>
              </span>
              Staging environment
            </a>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`PluginTerminal teaser with one link 1`] = `
<div
  class="Component-window-0-1-5 Component-windowDark-0-1-8 Component-windowAutoStretch-0-1-6"
  tabindex="1"
>
  <div
    class="Component-windowBody-0-1-2 Component-body-0-1-15"
  >
    <ul
      class="Component-ul-0-1-3"
    >
      <li
        class="Component-li-0-1-4"
      >
        <div
          class="Component-card-0-1-39 card"
        >
          <div
            class="Component-cardImageWrap-0-1-40"
          >
            <img
              alt="Storybook"
              class="card-img-top Component-cardImage-0-1-42"
              src="https://storybook.js.org/images/logos/icon-storybook.png"
            />
          </div>
          <div
            class="Component-cardBody-0-1-43 card-body"
          >
            <div
              class="Component-cardTitle-0-1-44 card-title h5"
            >
              Storybook
            </div>
            <p
              class="Component-cardText-0-1-45 card-text"
            >
              Build bulletproof UI components faster. Storybook is an open source tool for developing UI components in isolation for React, Vue, and Angular. It makes building stunning UIs organized and efficient.
            </p>
          </div>
          <a
            class="Component-link-0-1-46"
            href="http://localhost:6006"
            rel="noreferrer noopener"
            target="_blank"
          />
        </div>
      </li>
    </ul>
  </div>
</div>
`;
